syntax = "proto3";

option csharp_namespace = "Data.Grpc.Topology";

package Data.Topology;

import "google/protobuf/duration.proto";  

service TopologyService {
    rpc GetTopologyForRegions (RegionTopologyRequest) returns (RegionTopologyResponse) {}
}

message RegionTopologyRequest {
    repeated string region_names = 1;
}

message RegionTopologyResponse {
    repeated RegionTopology region_topologies = 1;
}

message RegionTopology {
    string region_name = 1;
    repeated NlManager nl_managers = 2;
}

message NlManager {
    int32 id = 1;
    string uri = 2;
    repeated DeviceInfo active_devices = 3;
}

message DeviceInfo {
    google.protobuf.Duration uptime = 1;
    int32 id = 2;
}
